# docs/swagger.json
@@ -4,6 +4,42 @@
         "contact": {}
     },
     "paths": {
+        "/admin/admin_info": {
+            "get": {
+                "description": "管理员登录",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "管理员接口"
+                ],
+                "summary": "管理员登录",
+                "operationId": "/admin/admin_info",
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/middleware.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/dto.AdminInfoOutput"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/admin_login/login": {
             "post": {
                 "description": "管理员登录",
@@ -53,6 +89,32 @@
         }
     },
     "definitions": {
+        "dto.AdminInfoOutput": {
+            "type": "object",
+            "properties": {
+                "avatar": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "introduction": {
+                    "type": "string"
+                },
+                "login_time": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "roles": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
         "dto.AdminLoginInput": {
             "type": "object",
             "required": [
@@ -61,10 +123,12 @@
             ],
             "properties": {
                 "password": {
+                    "description": "管理员密码",
                     "type": "string",
                     "example": "123456"
                 },
                 "username": {
+                    "description": "管理员用户名",
                     "type": "string",
                     "example": "admin"
                 }
@@ -74,6 +138,7 @@
             "type": "object",
             "properties": {
                 "token": {
+                    "description": "token",
                     "type": "string",
                     "example": "token"
                 }
